media/css/devreg/reviewers.less
/* ... */
@mobileborder: #d7d2c3;

@media (max-width: @mobile-max) {
    .mobile-queue-search, .mobile-paginator {
        display: block;
    }
    .impala-paginator {
        display: none;
    }
    .toggle-queue-search, #queue-search .button span, ul.tabnav a {
        font-size: 16px;
    }
    .button {
        margin-top: 0px;
        min-width: 0%;
        margin-right: 0;
        top: 8px;
        span {
            bottom: 9px;
            position: relative;
        }
    }
    #site-nav {
        border: 0px;
        .pad {
            height: 100%;
            padding: 0;
        }
        nav.menu-nav {
            height: 100%;
            ul {
                height: 100%;
            }
            li {
                height: 100%;
                &.selected {
                    background: rgb(62, 52, 62);
                    a {
                        color: @white;
                    }
                }
                a {
                    font-size: 16px;
                    position: relative;
                    top: 4px;
                }
            }
        }
    }
    #queue-search {
        padding: 0;
        margin: 26px 0 6px;
        label[for="id_text_query"] {
            display: none;
        }
        input#id_text_query {
            display: inline-block;
            margin-right: 5px;
            margin-top: 0;
            width: 75%;
        }
        .button {
            height: 36px;
            margin-top: 0px;
            max-width: 22%;
            min-width: 0%;
            margin-right: 0;
            top: 8px;
            span {
                bottom: 9px;
                font-size: 16px;
                position: relative;
            }
        }
        .toggle-queue-search {
            bottom: 64px;
            float: right;
            font-size: 16px;
            line-height: 6px;
            margin-right: 3px;
            position: relative;

        }
    }
    .island #queue-search {
        display: none;
    }
    #reviewers-score-bar {
        display: none;
    }
    dt {
        float: none;
        margin: 0 0 3px;
        width: 100%;
    }
    dd {
        margin-bottom: 15px;
    }
    #actions li {
        width: 50%;
        &.app-install {
            .button {
                display: block;
            }
        }
        &:first-child {
            padding-right: 3px;
        }
        &:nth-child(2) {
            padding-left: 3px;
        }
        &:last-child {
            display: none;
        }
        &.app-install button.product, .button {
            padding: 0;
            top: 0;
            height: 48px;
            font-size: 13px;
            font-weight: normal;
            border: 0;
        }
    }
    #page h1.menutrigger {
        background: #d7d2c4;
        color: #686868;
        line-height: 38px;
        margin: 0;
        padding: 0 8px;
        border-radius: 3px 3px 0 0;

    }
    .statuslist, .island.alpha {
        border: 1px solid @mobileborder;
        border-radius: 4px;
        background: #fff;
        margin-bottom: 15px;
    }
    .statuslist {
        > li {
            padding: 0 15px;
            line-height: 40px;
            &:first-child {
                border-bottom: 1px solid @mobileborder;
            }
            &:only-child {
                border-bottom: 0;
            }
        }
        &.padded > li {
            padding: 15px;
        }
    }
    .review-actions .action_nav li:first-child,
    .review-actions .action_nav li:last-child,
    .review-actions .action_nav li {
        border: 1px solid #2E5186;
    }
    .review-actions .action_nav li {
        border-radius: 0;
    }
    .review-actions .action_nav li:first-child {
        border-radius: 5px 5px 0 0;
    }
    .review-actions .action_nav li:last-child {
        border-radius: 0 0 5px 5px;
    }
    .review-actions .action_nav li {
        display: block;
    }
    header .author {
        margin: -30px 0 20px 50px;
    }
    .tabnav + .island {
        .border-box;
        max-width: 100%;
        overflow-x: auto;
        overflow-y: hidden;
    }
    // No mobile man is an island.
    .island {
        border: 0;
        border-radius: 0;
        padding: 0;
        background: transparent;
        box-shadow: none;
    }
    .island > p {
        padding: 5px 6px;
        line-height: 22px;
    }
    #scroll_sidebar_parent li {
        margin-top: 0;
    }
    .expandable {
        .thumbnail, .expandcontent {
            max-width: 200px;
        }
        .expandcontent {
            float: left;
            max-height: 200px;
            overflow: hidden;
            &.short {
                max-height: 48px;
            }
            &.expanded {
                max-height: inherit;
            }
        }
        .showmore {
            float: right;
            margin-top: 4px;
            font-weight: bold;
        }
    }
    #review-files-header {
        border-bottom: 1px solid #A5BFCE;
        h3 {
            float: none;
        }
    }
}
/* ... */

